@startuml
'https://plantuml.com/class-diagram

class ShootContext {
    - shootStrategy strategy;
    + shootContext(ShootStrategy strategy);
    + executeShoot(AbstractAircraft aircraft):List<Bullet>
}
ShootContext o--|> ShootStrategy

interface ShootStrategy {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

ShootStrategy <|.. StraightShoot
ShootStrategy <|.. ScatteredShoot

class StraightShoot{
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

class ScatteredShoot {
    + shoot(AbstractAircraft aircraft):List<BaseBullet>
}

@enduml